--- a/resources/assets/sass/paper/paper-dashboard.scss
+++ b/resources/assets/sass/paper/paper-dashboard.scss
@@ -32,14 +32,11 @@
 @import "paper/_cards";
 @import "paper/_chartist";
 @import "paper/_responsive";
+// custom
+@import "admin.custom";
+@import "admin.fonts";
+@import "admin.typography";
 
-/*@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "~bootstrap/scss/root";
-@import "~bootstrap/scss/modal";*/
-
-//@import "~bootstrap/scss/utilities";
 
 
 
