--- a/resources/assets/sass/paper/paper/_navbars.scss
+++ b/resources/assets/sass/paper/paper/_navbars.scss
@@ -56,7 +56,7 @@
 
 .navbar-default {
   background-color: $bg-nude;
-  border-bottom: 1px solid $medium-gray;
+  //border-bottom: 1px solid $medium-gray;
 
   .brand {
     color: $font-color !important;
