--- a/resources/assets/sass/paper/paper/mixins/_sidebar.scss
+++ b/resources/assets/sass/paper/paper/mixins/_sidebar.scss
@@ -23,7 +23,7 @@
 
 
   .logo {
-    border-bottom: 1px solid rgba($font-color, .3);
+   /* border-bottom: 1px solid rgba($font-color, .3);*/
 
     p {
       color: $font-color;
