--- a/resources/assets/sass/paper/admin.typography.scss
+++ b/resources/assets/sass/paper/admin.typography.scss
@@ -13,3 +13,11 @@ h2, h1, h3, h4 {
   margin: 0 auto;
   text-align: center;
 }
+
+.breadcrumbs {
+  margin-bottom: 15px;
+}
+
+.breadcrumbs .link_breadcrumbs {
+  display: inline-block;
+}
