--- a/resources/assets/sass/paper/paper/_dropdown.scss
+++ b/resources/assets/sass/paper/paper/_dropdown.scss
@@ -43,7 +43,7 @@
   }
 
   > li > a {
-    color: $font-color;
+    color: $bg-color-main;
     font-size: $font-size-base;
     padding: $padding-dropdown-vertical $padding-dropdown-horizontal;
     @include transition-none();
@@ -77,7 +77,7 @@
 
   > li > a:hover,
   > li > a:focus {
-    background-color: $default-color;
+    background-color: darken($body-bg-color, 10);
     color: $fill-font-color;
     opacity: 1;
     text-decoration: none;
