--- a/resources/assets/sass/paper/paper/_footers.scss
+++ b/resources/assets/sass/paper/paper/_footers.scss
@@ -35,8 +35,10 @@
     margin: 15px 3px;
     line-height: 20px;
     text-align: center;
+    a {
+      color: $footer-link;
+      font-size: 12px;
+    }
   }
-  .heart {
-    color: $danger-color;
-  }
+
 }
