--- a/resources/assets/sass/paper/paper/_responsive.scss
+++ b/resources/assets/sass/paper/paper/_responsive.scss
@@ -1,4 +1,9 @@
 @media (min-width: 992px) {
+
+  #navbar_paper .navbar-header{
+    display: none !important;
+  }
+
   .navbar {
     min-height: 56px;
   }
@@ -87,6 +92,20 @@
 /*          Changes for small display      */
 
 @media (max-width: 991px) {
+
+  #navbar_paper {
+    min-height: 60px;
+  }
+
+  .navbar-header #admin_header_name {
+    line-height: 60px;
+    color: white;
+  }
+  #admin_header_name {
+    color: $bg-color-main;
+    line-height: 38px;
+  }
+
   .sidebar {
     display: none;
   }
@@ -134,18 +153,18 @@
     display: block;
     top: 0;
     height: 100%;
-    width: 230px;
+    width: 260px;
     right: 0;
     z-index: 1032;
     visibility: visible;
-    background-color: #999;
+    background-color: $bg-color-main;
     overflow-y: visible;
     border-top: none;
     text-align: left;
     padding-right: 0px;
     padding-left: 0;
 
-    @include transform-translate-x(230px);
+    @include transform-translate-x(260px);
     @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
     .sidebar-wrapper {
@@ -153,7 +172,8 @@
       z-index: 3;
       overflow-y: scroll;
       height: 100%;
-      box-shadow: inset 1px 0px 0px 0px $medium-gray;
+      width: 270px;
+     /* box-shadow: inset 1px 0px 0px 0px $medium-gray;*/
     }
 
     .nav {
@@ -231,7 +251,7 @@
       height: 100%;
       width: 100%;
       position: absolute;
-      background-color: $bg-nude;
+      background-color: $body-bg-color;
       background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(112, 112, 112, 0) 60%, rgba(186, 186, 186, 0.15) 100%);
       display: block;
       content: "";
@@ -264,7 +284,7 @@
   }
   .nav-open .wrapper {
     left: 0;
-    @include transform-translate-x(-230px);
+    @include transform-translate-x(-260px);
   }
   .navbar-toggle .icon-bar {
     display: block;
@@ -280,6 +300,9 @@
     margin: 10px 15px 10px 0;
     width: 40px;
     height: 40px;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
   .bar1,
   .bar2,
