--- a/resources/assets/sass/paper/paper/_sidebar-and-main-panel.scss
+++ b/resources/assets/sass/paper/paper/_sidebar-and-main-panel.scss
@@ -182,7 +182,7 @@
   }
 
   > .footer {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+   /* border-top: 1px solid rgba(0, 0, 0, 0.1);*/
   }
 
   .navbar {
