--- a/resources/assets/sass/paper/paper/_tables.scss
+++ b/resources/assets/sass/paper/paper/_tables.scss
@@ -25,7 +25,8 @@
   > tfoot > tr > th,
   > thead > tr > td,
   > tbody > tr > td,
-  > tfoot > tr > td {
+  > tfoot > tr > td,
+  > thead > th {
     padding: 12px;
     vertical-align: middle;
   }
